# EcommForAll

./: .gitignore  AGENTS.md  AI_SERVICE_README.md  CONTRIBUTING.md  LICENSE  PROJECT-STRUCTURE.MD  README.md  docker-compose.yml  opencode.json
.github/workflows/: frontend-format-check.yml  maven.yml
.opencode/agents/: QUICKSTART.md  README.md  TEMPLATE.md  gh-bot.md  github-agent.md  ui-test.md
.opencode/agents/docs/: QUICKSTART.md
.opencode/agents/github/: README.md  agent.md
.opencode/agents/github-agent/: README.md  agent.md
.opencode/skills/browser-testing/: SKILL.md
ai-backend/: AI_SERVICE_README.md  PYDANTIC_AI_INTEGRATION.md  pyproject.toml
ai-backend/app/: main.py
ai-backend/app/api/: __init__.py
ai-backend/app/api/api_v1/: router.py
ai-backend/app/models/: __init__.py  ai.py  contracts.py
ai-backend/app/services/: __init__.py
ai-backend/scripts/: fetch_contracts.py
backend/: .gitignore  AI_SERVICE_README.md  Dockerfile  ecommforall-ai-e8ad0172c67d.json  pom.xml  rewrite.yml
backend/.github/: copilot-instructions.md
backend/scripts/: test-orders.sh
docs/: CI-CD.md  GCP_SETUP.md
frontend/: .prettierignore  .prettierrc  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  routes.ts  test-formatting.tsx
scripts/seedEcommforall/: DATABASE_SCHEMA_FOR_MOCKAROO.md  README.md  SEEDING_SUMMARY.md  api-docs.json  seed_ecommforall.py  seed_from_csv.py  seed_log.txt
seedEcommforall/: API_ENDPOINTS.md  requirements.txt  seed_ecommforall.py
(+528 files in other folders)
