[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic-ai-slim[logfire,vertexai]>=1.39.0",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
contracts = [
    "datamodel-code-generator>=0.26.0",
]
